# ionia-next

./: AI_DEMO_README.md  AUTH_SIMPLIFICATION_SUMMARY.md  COMPLETE_AI_INTEGRATION.md  EVENT_SYSTEM_IMPLEMENTATION.md  FILES_CREATED.md  GOOGLE_OAUTH_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_STATUS.md  INTEGRATION_SUMMARY.txt  LMS_README.md  PHASEWISE_PLAN.md  QUICK_DEMO_GUIDE.md  QUICK_START.md  build-lms.sh  demo_test.md  hey copy.ipynb  hey.ipynb  hey.py  interface TestSubmissionPayload.ts  models-erd.mmd  nextconfig.new  package-lock.json  package.json  role_based_access.md  start-all.sh  start-demo.sh  stop-all.sh  stop-demo.sh  task  test-ai-integration.sh  test.ipynb
PraisonAI/src/praisonai-agents/: pyproject.toml  requirements.txt
PraisonAI/src/praisonai-agents/praisonaiagents/: session.py
PraisonAI/src/praisonai-agents/praisonaiagents/agent/: context_agent.py
PraisonAI/src/praisonai-agents/praisonaiagents/task/: task.py
backend/: .env.example  CLOUDINARY_SETUP.md  EMAIL_VERIFICATION_MIGRATION.md  MIGRATION_GUIDE.md  Procfile  QUICK_START_MIGRATION.md  SECURITY.md  deploy-security-update.sh  nixpacks.toml  package-lock.json  package.json  railway.toml
backup_code/: question.model.js
frontend/: MIGRATION_SUMMARY.md  migrate-redux-to-zustand.sh  next.config.js  package-lock.json  package.json  vercel.json
frontend-new/: next.config.js  package-lock.json  package.json
lms_ai/: AI_INTEGRATION_GUIDE.md
lms_backend/: .env.example  CHANGES_SUMMARY.md  Dockerfile  FINAL_INTEGRATION_SUMMARY.md  MIGRATION_GUIDE.md  MIGRATION_WORKFLOW.md  PHASE1_STRUCTURE_COMPLETE.md  QUICK_FIX.md  RBAC_COMPLETE_SUMMARY.md  RBAC_IMPLEMENTATION.md  README.md  START_HERE.md  TECH_STACK_COMPLETE.md  alembic.ini  docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml  requirements-minimal.txt  requirements.txt  run.sh  setup.sh  test_api.sh  test_rbac.py
lms_frontend/: 100_PERCENT_COMPLETE.md  BUILD_SUCCESS.md  CLEANUP_COMPLETE.md  CLEAR_AND_RESTART.md  COMPLETE_TESTING_GUIDE.md  COMPLETION_REPORT.md  DEMO_SCRIPT.md  FINAL_MIGRATION_STATUS.md  FINAL_PROJECT_SUMMARY.md  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  LAUNCH_CHECKLIST.md  MIGRATION_COMPLETED.md  MIGRATION_TO_NEW_SYSTEM.md  MOCKUSERID_REMOVAL_SUMMARY.md  NAVIGATION.md  PROJECT_STATUS.md  QUICK_START.md  RBAC_SYSTEM_DOCUMENTATION.md  README.md  README_IMPLEMENTATION.md  SECURITY_SETUP_INSTRUCTIONS.md  SIDEBAR_NAVIGATION_GUIDE.md  SIDEBAR_USAGE_GUIDE.md  START_HERE.md  TESTING_GUIDE.md  TRANSFORMATION_SUMMARY.md  USER_SCHEMA_UPDATE.md  env.example  (+10 more)
(+851 files in other folders)
